package fix and create reserve
